# tg_bitrix

./: .gitignore  Dockerfile  docker-compose.yml  env.examle  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ccca12ae1863_initial.py
app/: message_handlers.py  repository.py  services.py  settings.py
app/db/: engine.py  models.py
tests/: conftest.py  test_repository.py
